Use txt based key

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=./garritfranke.pgp" />
+<meta http-equiv="refresh" content="0; url=./garritfranke.txt" />
